Remove obsolete workaround of a Gradle bug